stramers section completed and a splide slider

--- a/src/components/Streamer/Streamer.css
+++ b/src/components/Streamer/Streamer.css
@@ -1,5 +1,5 @@
 .section {
-    padding: 20% 0;
+    padding: 7% 0;
     position: relative;
     z-index: 0;
   }
@@ -7,6 +7,7 @@
     position: absolute;
     inset: 0;
     z-index: -1;
+    background: url('../../assets/images/trend-bg.png') no-repeat;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -171,10 +172,26 @@
   
   .section .card .card-text {
     font-size: 0.8215rem;
-    color: var(--white, #ffffff);
+    color:#ffffff;
     margin-top: 0.5rem;
   }
-  
+  .section__para {
+    font-family: "Montserrat", sans-serif;
+    font-size: calc(0.875rem + 1vmin);
+    font-weight: 600;
+    letter-spacing: 0.125rem;
+    color:#ffffff;
+    margin-bottom: 0;
+  }
+  .section__para.one {
+    color: #fc2ac3;
+  }
+  .section__para.two {
+    color:#0acfff;
+    margin-bottom: 3rem;
+  }
+
+
   .load-more {
     text-align: center;
     margin-top: 4rem;
@@ -191,4 +208,4 @@
     background-color: var(--white, #ffffff);
     color: var(--purple-400, #100032);
   }
-    
+  
