--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -217,3 +217,35 @@
   background-image: -webkit-linear-gradient(103deg, #ef00ff 0%, #0bc7ef 100%);
   background-image: linear-gradient(-13deg, #ef00ff 0%, #0bc7ef 100%);
 }
+/*Responsive css*/
+/* Small Devices */
+@media screen and (min-width: 576px) {
+  /* Hero */
+  .hero::before {
+    width: 500px;
+    height: 564px;
+    bottom: -3.375rem;
+  }
+
+  .hero__content .button-group .you-btn {
+    min-width: 146px;
+    max-width: 185px;
+  }
+}
+/* Medium Devices */
+@media screen and (min-width: 768px) {
+  /* Hero */
+  .hero::before {
+    width: 700px;
+    height: 764px;
+    left: 4%;
+    bottom: -4.25rem;
+  }
+}
+/* Extra Large Devices */
+@media screen and (min-width: 1200px) {
+  /* Hero */
+  .hero .hero__content {
+    margin-right: unset;
+  }
+}
