--- a/src/components/RoadMap/RoadMap.css
+++ b/src/components/RoadMap/RoadMap.css
@@ -248,9 +248,17 @@
     .roadmap__line {
       margin-left: 15%;
     }
+  }
+  @media screen and (max-width: 576px) {
+    .roadmap__line::before{
+      top: 27px;
+  }
+  .roadmap__line::after {
+    top: 97%;
+}
 
   }
-  
+
   /* Medium Devices */
   @media screen and (min-width: 768px) {
     /* Roadmap */
