--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -11,7 +11,7 @@
   box-shadow: none;
 }
 
-.section {
+.banner-section .section {
   padding: 5% 0;
   position: relative;
   z-index: 0;
@@ -226,11 +226,21 @@
     height: 564px;
     bottom: -3.375rem;
   }
-
   .hero__content .button-group .you-btn {
     min-width: 146px;
     max-width: 185px;
   }
+  .banner-section .section {
+    padding: 20% 0;
+  }
+  
+}
+@media screen and (max-width: 576px) {
+  /* Hero */
+  .banner-section .section {
+    padding: 20% 0;
+  }
+  
 }
 /* Medium Devices */
 @media screen and (min-width: 768px) {
@@ -242,6 +252,7 @@
     bottom: -4.25rem;
   }
 }
+
 /* Extra Large Devices */
 @media screen and (min-width: 1200px) {
   /* Hero */
