aded active class to the first slide

--- a/src/components/RoadMap/RoadmapTwo.css
+++ b/src/components/RoadMap/RoadmapTwo.css
@@ -79,6 +79,8 @@
 .road-line .circle.activeCircle{
     animation-name: circleIncreaser;
     animation-duration: 2s;
+    background: red;
+    transition: 2s;
 }
 
 @keyframes widthIncreaser{
