--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,4 +1,3 @@
-
 .container {
   max-width: 96%;
   position: relative;
@@ -47,21 +46,12 @@
   left: 0;
 }
 
-
 .you-btn {
-  background-image: -webkit-linear-gradient(
-    112deg,
-     #7802af 0%,
-    #0cc6ef 100%
-  );
-  background-image: linear-gradient(
-    -22deg,
-     #7802af 0%,
-    #0cc6ef 100%
-  );
+  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 100%);
+  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 100%);
   padding: 0.375rem 1.5rem;
   border-radius: 50rem;
-  color:  #ffffff;
+  color: #ffffff;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   font-size: 1.0625rem;
@@ -74,17 +64,9 @@
 }
 
 .you-btn:hover {
-  color:#ffffff;
-  background-image: -webkit-linear-gradient(
-    112deg,
-    #7802af 0%,
-   #0cc6ef 90%
-  );
-  background-image: linear-gradient(
-    -22deg,
-    #7802af 0%,
-     #0cc6ef 90%
-  );
+  color: #ffffff;
+  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 90%);
+  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 90%);
 }
 
 /* Hero */
@@ -107,15 +89,16 @@
   content: "";
   width: 280px;
   height: 264px;
-  background-image: url("../../assets/images/hero-char.png");
+  /* border: 1px solid white; */
+  /* background-image: url("../../assets/images/hero-char.png"); */
+  background-image: url("../../assets/images/man-removebg.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 120%;
   background-position: center;
   left: 4%;
-  bottom: -1.5rem;
+  bottom: -1%;
   z-index: 0;
 }
-
 
 .hero .hero-char {
   max-width: 100%;
@@ -177,7 +160,7 @@
 .token-search .input-group > * {
   font-size: calc(0.75rem + 1vmin);
   font-weight: 600;
-  color:#223087;
+  color: #223087;
 }
 
 .token-search .input-group > .form-control:first-of-type {
@@ -197,7 +180,7 @@
   -o-object-position: center;
   object-position: center;
 }
-#copy-btn img{
+#copy-btn img {
   max-width: 21px;
 }
 .hero__content .button-group {
@@ -239,7 +222,6 @@
   .banner-section .section {
     padding: 20% 0;
   }
-  
 }
 /* Medium Devices */
 @media screen and (min-width: 768px) {
