--- a/src/components/NFT/NFT.css
+++ b/src/components/NFT/NFT.css
@@ -1,34 +1,34 @@
 .nft-section .section {
-    padding: 7% 0;
-    position: relative;
-    z-index: 0;
-  }
- .nft-section  .bg__holder {
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    background: url('../../assets/images/trend-bg.png') no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    text-align: center;
-  }
-  .container {
-    max-width: 96%;
-    position: relative;
-    z-index: inherit;
-  }
-  /* NFTs */
+  padding: 7% 0;
+  position: relative;
+  z-index: 0;
+}
+.nft-section .bg__holder {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: url("../../assets/images/trend-bg.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+}
+.container {
+  max-width: 96%;
+  position: relative;
+  z-index: inherit;
+}
+/* NFTs */
 .nfts {
   overflow: hidden;
 }
@@ -174,19 +174,19 @@
   font-weight: 800;
   border-radius: 0.625rem;
 }
-.splide__slide{
+.splide__slide {
   width: 100%;
 }
 
-
-
-
 @media screen and (min-width: 992px) {
-/* NFTs */
-.nfts::after {
-  font-size: calc(9rem + 1vmin);
+  /* NFTs */
+  .nfts::after {
+    font-size: calc(9rem + 1vmin);
+  }
 }
 
-
-
+@media (min-width: 800px) {
+  #nfts {
+    padding-inline: 80px;
   }
+}
