--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -29,8 +29,8 @@
 
 .intro-img {
   text-align: center;
-  position: relative;
-  z-index: inherit;
+  /* position: relative;
+  z-index: inherit; */
 }
 .intro-img:hover {
   animation: bouncing 2s infinite ease-in-out;
