--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -35,6 +35,7 @@
   color: #ffffff;
   font-weight: 400;
   text-align: center;
+  margin-bottom: 80px;
 }
 
 .testimonial .para {
@@ -110,9 +111,7 @@
 
 .brand {
   height: 60px;
-  /* margin: 16px; */
   padding: 8px 32px;
-  /* border: 1px solid white; */
 }
 
 /* Medium Devices */
