--- a/src/components/Tournament/Tournament.css
+++ b/src/components/Tournament/Tournament.css
@@ -10,6 +10,7 @@
   background: url("../../assets/images/tournament-bg.png") no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   overflow: hidden;
   display: -webkit-box;
