--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -61,6 +61,7 @@
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
   display: inline-block;
+  cursor: pointer;
 }
 
 .you-btn:hover {
@@ -201,6 +202,39 @@
   border-radius: 0.875rem;
   background-image: -webkit-linear-gradient(103deg, #ef00ff 0%, #0bc7ef 100%);
   background-image: linear-gradient(-13deg, #ef00ff 0%, #0bc7ef 100%);
+}
+
+#modal {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+#modal .modalContent {
+  width: 50%;
+  background-color: #100032;
+  border-radius: 16px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 240px;
+  padding: 80px 16px;
+  position: relative;
+}
+#modal .modalContent .closeModal {
+  width: 24px;
+  height: 24px;
+  background-color: #01eaff;
+  color: darkblue;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
 /*Responsive css*/
 /* Small Devices */
