--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -53,7 +53,7 @@
   border-radius: 50rem;
   color: #ffffff;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.0625rem;
   font-weight: 700;
   text-align: center;
@@ -87,10 +87,10 @@
 
 .hero::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 280px;
   height: 264px;
-  background-image: url("../../assets/images/ch.png");
+  background-image: url('../../assets/images/ch.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -125,7 +125,7 @@
 .heading__1 {
   font-size: calc(1.8rem + 1vmin);
   font-weight: 700;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .hero__content .heading__1 {
@@ -137,7 +137,7 @@
 .para {
   font-size: calc(0.75rem + 1vmin);
   color: var(--white, #ffffff);
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin-bottom: 1.25rem;
 }
 
@@ -204,7 +204,7 @@
   background-image: linear-gradient(-13deg, #ef00ff 0%, #0bc7ef 100%);
 }
 
-#modal {
+/* #modal {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -251,7 +251,7 @@
 #modal .modalContent .closeModal:hover {
   background-color: hotpink;
   scale: 1.1;
-}
+} */
 
 @keyframes modal {
   0% {
