--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -55,7 +55,7 @@
   font-size: 1rem;
   color: #ffffff;
   font-weight: 600;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   -webkit-transition: 300ms ease;
   transition: 300ms ease;
@@ -85,21 +85,13 @@
 }
 
 .header-main .you-btn {
-  background-image: -webkit-linear-gradient(
-    112deg,
-     #7802af 0%,
-     #0cc6ef 100%
-  );
-  background-image: linear-gradient(
-    -22deg,
-     #7802af 0%,
-    #0cc6ef 100%
-  );
+  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 100%);
+  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 100%);
   padding: 0.375rem 1.5rem;
   border-radius: 50rem;
   color: #ffffff;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.0625rem;
   font-weight: 700;
   text-align: center;
@@ -111,20 +103,12 @@
 
 .header-main .you-btn:hover {
   color: #ffffff;
-  background-image: -webkit-linear-gradient(
-    112deg,
-    #7802af 0%,
-    #0cc6ef 90%
-  );
-  background-image: linear-gradient(
-    -22deg,
-    #7802af 0%,
-    #0cc6ef 90%
-  );
+  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 90%);
+  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 90%);
 }
 
 .user-details-btn .btn {
-  color:#ffffff;
+  color: #ffffff;
   font-size: 1.75rem;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -137,7 +121,7 @@
 }
 
 .user-details-btn .dropdown-menu {
-  background-color:  #100032;
+  background-color: #100032;
   -webkit-transform: translate3d(0px, 68px, 0px) !important;
   transform: translate3d(0px, 68px, 0px) !important;
   box-shadow: 0 0.25rem 1rem 0 rgba(1, 234, 255, 0.21);
@@ -146,15 +130,14 @@
 }
 
 .user-details-btn .dropdown-item {
-  color:  #ffffff;
+  color: #ffffff;
   -webkit-transition: 250ms ease;
   transition: 250ms ease;
 }
 
 .user-details-btn .dropdown-item:focus,
 .user-details-btn .dropdown-item:hover {
-  background-color:  #7802af;
-
+  background-color: #7802af;
 }
 
 .menu-btn {
@@ -262,7 +245,6 @@
   display: -ms-flexbox;
   display: flex;
 }
-
 
 /* Extra Large Devices */
 @media screen and (min-width: 1200px) {
